<resources>
    <string name="app_name">FoT News CampusBuzz</string>

    <!-- Common -->
    <string name="loading">Loading...</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="exit">EXIT</string>

    <!-- Authentication -->
    <string name="welcome_back">Welcome Back</string>
    <string name="login_account">Login to your account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">LOGIN</string>
    <string name="login_link">Login</string>
    <string name="register">Register</string>
    <string name="create_account">Create your account</string>
    <string name="email_username">Username</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="already_have_account">Already have an account? </string>
    <string name="terms_agreement">By registering, you are agreeing to our Terms of use and Privacy Policy</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="sign_out_confirmation">Do you really want to sign-out?</string>

    <!-- Navigation -->
    <string name="general_news">News</string>
    <string name="sports_news">Sports News</string>
    <string name="academic_news">Academic News</string>
    <string name="faculty_news">Faculty News</string>
    <string name="profile">Profile</string>

    <!-- User Profile -->
    <string name="user_info">User Info</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name_here">Name Here</string>
    <string name="email_address">Email Address</string>
    <string name="sample_email">sample@email.com</string>


    <!-- Developer Info -->
    <string name="dev_info">Dev Info</string>
    <string name="name">Name</string>
    <string name="student_id">Student ID</string>
    <string name="personal_stat">Personal Statement</string>
    <string name="developer_name">A.K.K.A. Hemachandra</string>
    <string name="developer_id">2020T00872</string>
    <string name="developer_statement">Mobile Application Development Student at Faculty of Technology, University of Colombo</string>
    <string name="release_version">Release Version</string>
    <string name="version">Version 1.0</string>

    <!-- News Categories -->
    <string name="news">News</string>
    <string name="sports">Sports</string>
    <string name="academics">Academics</string>
    <string name="faculty">Faculty</string>

    <string name="menu_icon_desc">Open navigation drawer</string>
    <string name="user_icon_desc">User profile</string>
    <string name="more_options_desc">More options</string>
    <string name="tab_sports_desc">Open Sports section</string>
    <string name="tab_academics_desc">Open Academics section</string>
    <string name="tab_faculty_desc">Open Faculty section</string>


    <!-- Error Messages -->
    <string name="field_required">This field is required</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="weak_password">Password should be at least 6 characters</string>
    <string name="signin_failed">Sign in failed. Please check your credentials</string>
    <string name="signup_failed">Sign up failed. Please try again</string>
    <string name="network_error">Network error. Please check your connection</string>

    <!-- Success Messages -->
    <string name="signup_success">Account created successfully</string>
    <string name="profile_updated">Profile updated successfully</string>
    <string name="signed_out">Signed out successfully</string>

    <!-- Sample News -->
    <string name="sample_news_title">Inter-Faculty Cricket Tournament</string>
    <string name="sample_news_description">The annual cricket tournament between faculties is scheduled for next week...</string>
    <string name="sample_academic_title">Seminar on AI and Ethics</string>
    <string name="sample_academic_description">Join us for an enlightening seminar on Artificial Intelligence and Ethics...</string>
</resources>