<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <ImageView
            android:id="@+id/iv_app_logo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_register"
            style="@style/AppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_app_logo" />

        <TextView
            android:id="@+id/tv_subtitle"
            style="@style/BodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/create_account"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_register" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_marginTop="48dp"
            android:hint="Username"
            android:textColorHint="#3F51B5"
            app:boxBackgroundColor="#D9D9D9"
            app:startIconDrawable="@drawable/ic_person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="text"
                android:textColor="@color/text_primary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/InputField"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:hint="@string/email"
            android:textColorHint="@color/primary_blue"
            app:startIconDrawable="@drawable/ic_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:textColor="@color/text_primary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/InputField"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            android:textColorHint="@color/primary_blue"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="textPassword"
                android:textColor="@color/text_primary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirm_password"
            style="@style/InputField"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/primary_blue"
            android:fontFamily="@font/roboto_regular"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="textPassword"
                android:textColor="@color/text_primary" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_terms"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/terms_agreement"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_confirm_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            style="@style/PrimaryButton"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:text="@string/sign_up"
            app:cornerRadius="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_terms" />


        <TextView
            android:id="@+id/tv_login_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="24dp"
            android:text="@string/already_have_account"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/loginNow"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerButton"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/loginNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login_link"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_login_prompt"
            app:layout_constraintTop_toTopOf="@id/tv_login_prompt" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>